release 1.15

release 1.14 (09-2012)
- Fixed issue JERSEY-1400
  http://java.net/jira/browse/JERSEY-1400
  Bad format JSON request got Http200(OK)
- Fixed issue JERSEY-759
  http://java.net/jira/browse/JERSEY-759
  Getting file name from the content disposition header of multi-part messages sent by Internet Explorer was broken.
- Fixed issue JERSEY-1410
  http://java.net/jira/browse/JERSEY-1410
  Added length check (prevents StringIndexOutOfBoundsException)
- Fixed issue JERSEY-1407
  http://java.net/jira/browse/JERSEY-1407
  Licensee bundle now includes JAX-RS sources
- Fixed issue JERSEY-1277
  The web container Grizzly doesn't call anymore the ServletContextListener instances at shutdown
  Grizzly version upgraded to 2.2.16
  Grizzly HTTP Client upgraded to 1.2
- Fixed issue JERSEY-881
  http://java.net/jira/browse/JERSEY-881
  Package name resource config does not work in OSGi environment
- Fixed issue JERSEY-1373
  http://java.net/jira/browse/JERSEY-1373
  Features are lost when configuring PackagesResourceConfig using @ApplicationPath
- Fixed issue JERSEY-1392
  http://java.net/jira/browse/JERSEY-1392
  Jersey Inmemory container rewrites Container Request/Response Filters
- Fixed issue JERSEY-1197
  http://java.net/jira/browse/JERSEY-1197
  Jersey Test Framework constructor fails when given multiple packages
- Fixed issue JERSEY-1336
  http://java.net/jira/browse/JERSEY-1336
  WADL: Matrix params were generated in "request" element, which violates WADL spec; moved
  to resource where it should be.
- Fixed issue JERSEY-1350
  http://java.net/jira/browse/JERSEY-1350
  Memory leak in OAuth NonceManager
- Fixed issue JERSEY-1341
  http://java.net/jira/browse/JERSEY-1341
  UriBuilderImpl is now adding "=" after the query parameter name even if the value is empty.
- Fixed issue JERSEY-1293
  http://java.net/jira/browse/JERSEY-1293
  ApacheHttpClient4 proxy uri was not used when credentials were not specified.
- Fixed issue JERSEY-1230